# pulsar

./: .gitignore  Cargo.toml  HFT_STRATEGY_GUIDE.md  Makefile  NOTES.md  README.md  STRATEGY_GUIDE.md  historical_data.csv  strategy_comparison_results.md  temp_main.rs  test_all_strategies.sh  test_data.csv  test_strategies.sh  volatile_test_data.csv  watch.sh
.cursor/rules/: code_quality_standards.mdc
bots/binance/: Cargo.toml  HFT_README.md  test_all_strategies.sh
bots/binance/src/: backtest.rs  main.rs  trade.rs
config/: adaptive_multi_factor_strategy.toml  adaptive_regime_strategy.toml  advanced_momentum_strategy.toml  advanced_order_strategy.toml  advanced_strategies_config.toml  binance_exchange.toml  capture_rotation.toml  correlation_diversified_portfolio_strategy.toml  enhanced_pulsar_strategy.toml  enhanced_rsi_strategy.toml  fractal_approximation_strategy.toml  game_theory_ml_strategy.toml  hft_market_maker_strategy.toml  hft_strategies_config.toml  hft_ultra_fast_strategy.toml  kalman_filter_strategy.toml  market_maker_strategy.toml  mean_reversion_hft_strategy.toml  mean_reversion_hft_strategy_optimized.toml  mean_reversion_strategy.toml  microstructure_arbitrage_strategy.toml  momentum_breakout_hft_strategy.toml  momentum_scalping_strategy.toml  multi_timeframe_momentum_strategy.toml  neural_market_microstructure_strategy.toml  neural_network_strategy.toml  order_book_imbalance_strategy.toml  portfolio_config.toml  pulsar_memonly_strategy.toml  pulsar_trading_strategy.toml  quantum_hft_strategy.toml  refined_rsi_strategy.toml  rsi_hft_strategy.toml  rsi_strategy.toml  scalping_hft_strategy.toml  sentiment_analysis_strategy.toml  spline_strategy.toml  statistical_arbitrage_hft_strategy.toml  statistical_arbitrage_strategy.toml  stochastic_hft_strategy.toml  (+68 more)
config/strategies/: liquidity_sweep_reversal.toml  market_maker.toml  market_maker_1000catusdt.toml  market_maker_aceusdt.toml  market_maker_actusdt.toml  market_maker_aiusdt.toml  market_maker_apeusdt.toml  market_maker_arkmusdt.toml  market_maker_arusdt.toml  market_maker_atausdt.toml  market_maker_ba.toml  market_maker_bid_ask.toml  market_maker_bid_ask_glm.toml  market_maker_biousdt.toml  market_maker_bnbfdusd.toml  market_maker_bnbusdt.toml  market_maker_btcusdt.toml  market_maker_bttcusdt.toml  market_maker_chrusdt.toml  market_maker_ckbusdt.toml  market_maker_cookieusdt.toml  market_maker_cosusdt.toml  market_maker_dentusdt.toml  market_maker_dogefdusd.toml  market_maker_dogefdusd_aggressive.toml  market_maker_dogefdusd_optimized.toml  market_maker_dogefdusd_twosided.toml  market_maker_dogefdusd_twosided_candidate.toml  market_maker_dogefdusd_twosided_combo_a.toml  market_maker_dogefdusd_twosided_combo_b.toml  market_maker_dogefdusd_twosided_combo_c.toml  market_maker_dogefdusd_twosided_combo_d.toml  market_maker_dogefdusd_twosided_combo_e.toml  market_maker_dogefdusd_twosided_combo_f.toml  market_maker_dogefdusd_twosided_combo_g.toml  market_maker_dogefdusd_twosided_live_a.toml  market_maker_dogefdusd_twosided_live_b.toml  market_maker_dogefdusd_twosided_live_c.toml  market_maker_dogefdusd_twosided_live_d.toml  market_maker_dogefdusd_twosided_live_e.toml  (+35 more)
core/src/: lib.rs
docs/: AGENT_PLAYBOOK.md  ARCHITECTURE.md  CAPTURE_PIPELINE.md  CHANGELOG_MM_OPTIMIZATION.md  MODEL_TESTING.md  PULSAR_OPUS.md  ROADMAP.md  SESSION_STATE.md  backtest_latency_factors.md  config_review_fixes.md  configuration_separation.md  parameter_usage_analysis.md  realistic_backtesting_guide.md
docs/strategies/: liquidity_sweep_reversal.md  market_maker.md  market_maker_rework_plan.md  (+5 more)
examples/: advanced_strategies_example.rs  individual_config_example.rs  strategy_config_example.rs
exchanges/binance/: Cargo.toml
exchanges/binance/src/: backtest.rs  client.rs  config.rs  lib.rs  models.rs  trader.rs
exchanges/binance/tests/: client_parse_tests.rs
scripts/: backtest_portfolio.sh  compute_correlation.sh  correlation_analysis.sh  correlation_report.txt  daily_pnl.csv  live_trade.sh
shared/: indicators.rs  utils.rs
strategies/: Cargo.toml
strategies/mean_reversion/: Cargo.toml
strategies/src/: adaptive_multi_factor_strategy.rs  adaptive_regime_strategy.rs  advanced_momentum_strategy.rs  advanced_order_strategy.rs  confidence.rs  config.rs  correlation_diversified_portfolio_strategy.rs  cost_gate.rs  enhanced_pulsar_strategy.rs  enhanced_rsi_strategy.rs  fractal_approximation_strategy.rs  game_theory_ml_strategy.rs  hft_market_maker_strategy.rs  hft_ultra_fast_strategy.rs  kalman_filter_strategy.rs  lib.rs  liquidity_sweep.rs  liquidity_sweep_reversal.rs  market_maker.rs  market_maker_ba.rs  market_maker_bid_ask.rs  market_maker_bid_ask_glm.rs  market_maker_hft.rs  market_maker_hft.rs.bak_1level  market_maker_strategy.rs  mean_reversion.rs  mean_reversion_hft_strategy.rs  mean_reversion_strategy.rs  microprice_imbalance_maker.rs  microstructure_arbitrage_strategy.rs  models.rs  momentum_breakout_hft_strategy.rs  momentum_scalping.rs  momentum_scalping_strategy.rs  multi_timeframe_momentum_strategy.rs  neural_market_microstructure_strategy.rs  neural_network_strategy.rs  null_strategy.rs  order_book_imbalance.rs  order_book_imbalance_strategy.rs  (+26 more)
strategies/tests/: liquidity_sweep_reversal_tests.rs  microprice_imbalance_maker_tests.rs  spread_regime_capture_tests.rs  trade_flow_momentum_tests.rs  trade_flow_reclaim_tests.rs
trade/: Cargo.toml
trade/src/: backtest.rs  config.rs  execution.rs  executor.rs  lib.rs  logger.rs  market.rs  metrics.rs  models.rs  portfolio_manager.rs  signal.rs  simulation.rs  strategy.rs  trader.rs  trading_engine.rs
trade/tests/: backtest_tests.rs  market_state_tests.rs  metrics_tests.rs
