[package]
name = "strategies"
version = "0.1.0"
edition = "2024"
description = "Trading strategies for the Pulsar trading framework."
license = "MIT"
repository = "https://github.com/merext/pulsar"
readme = "README.md"
keywords = ["trading", "strategies", "crypto"]
categories = ["algorithms"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
splines = "4.4"
nalgebra = "0.32"
trade = { path = "../trade" }
tracing = "0.1"
fastrand = "2.0"

