[package]
name = "strategies"
version = "0.1.0"
edition = "2024"
description = "Trading strategies for the Pulsar trading framework."
license = "MIT"
repository = "https://github.com/merext/pulsar"
readme = "README.md"
keywords = ["trading", "strategies", "crypto"]
categories = ["algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
rand = "0.8"
trade = { path = "../trade" }

tracing = "0.1"
fastrand = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
