[package]
name = "trade"
version = "0.1.0"
edition = "2024"
description = "Core trading library for the Pulsar trading framework."
license = "MIT"
repository = "https://github.com/merext/pulsar"
readme = "README.md"
keywords = ["trading", "trade", "crypto"]
categories = ["libraries"]

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
tracing = "0.1"
rand = "0.8"

