[package]
name = "binance-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
binance-exchange = { path = "../../exchanges/binance" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
strategies = { path = "../../strategies" }
splines = "4.4"
trade = { path = "../../trade" }
tracing = "0.1"
tracing-subscriber = "0.3"



