[package]
name = "binance-bot"
version = "0.1.0"
edition = "2024"
description = "A Binance trading bot for the Pulsar trading framework."
license = "MIT"
repository = "https://github.com/merext/pulsar"
readme = "README.md"
keywords = ["trading", "binance", "crypto", "bot"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
binance-exchange = { path = "../../exchanges/binance" }
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
strategies = { path = "../../strategies" }
splines = "4.4"
trade = { path = "../../trade" }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"



