[package]
name = "binance-exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
binance-sdk = { version = "6.0.0", features = ["all"] }
tokio-stream = "0.1"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
trade = { path = "../../trade" }
async-trait = "0.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.5"
anyhow = "1.0"
tokio = "1.46.0"
