[package]
name = "binance-exchange"
version = "0.1.0"
edition = "2024"
description = "A Binance exchange integration for the Pulsar trading bot."
license = "MIT"
repository = "https://github.com/merext/pulsar"
readme = "README.md"
keywords = ["trading", "binance", "crypto"]
categories = ["api-bindings"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
bytes = "1.10.1"
binance-sdk = { version = "6.0.0", features = ["all"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
trade = { path = "../../trade" }
strategies = { path = "../../strategies" }
async-trait = "0.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.5"
anyhow = "1.0"
tokio = "1.46.1"
tracing = "0.1"
